# fastapi-admin

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
fastapi-admin/: __init__.py  fastapi_admin.sh
fastapi_app/: __init__.py  fastapi_app.py  fastapi_project.py  help.py  logger.py
fastapi_app/static/: .gitignore  Dockerfile  config.py  help.txt
