[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi_app"
version = "0.1.5"
description = "A command-line tool to create a FastAPI app with a predefined directory structure and files."
authors = [
    { name = "Bimal Patel", email = "bimal@steinnlabs.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
keywords = ["FastAPI", "CLI", "app-generator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["fastapi_app"]

[project.scripts]
fastapi_app = "fastapi_app:main"

[project.urls]
Homepage = "https://github.com/BimalSteinn/fastapi_app"
Issues = "https://github.com/BimalSteinn/fastapi_app/issues"
